<resources>
    <string name="app_name">Meiro</string>
    <string name="level_1">初級</string>
    <string name="level_2">中級</string>
    <string name="level_3">上級</string>

    <string name="give_up">ギブアップ</string>
    <string name="return_home">戻る</string>

    <string name="move_up">前進</string>
    <string name="move_down">後ろ</string>
    <string name="move_right">右</string>
    <string name="move_left">左</string>
</resources>
