<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/meiroMap"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <FrameLayout
        android:id="@+id/meiro_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="100dp">
        <Button
            android:id="@+id/move_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/move_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/move_down" />

        <Button
            android:id="@+id/move_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/move_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/move_left" />
    </RelativeLayout>

    <Button
        android:id="@+id/give_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_up" />

    <Button
        android:id="@+id/return_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home" />

</LinearLayout>